--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Jun Tian <juti@microsoft.com>"]
 version = "0.1.0"
 
 [deps]
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
