--- a/Project.toml
+++ b/Project.toml
@@ -5,4 +5,5 @@ version = "0.1.0"
 
 [deps]
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
