--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Jun Tian <juti@microsoft.com>"]
 version = "0.1.0"
 
 [deps]
+ArcadeLearningEnvironment = "b7f77d8d-088d-5e02-8ac0-89aab2acc977"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
