--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ArcadeLearningEnvironment = "b7f77d8d-088d-5e02-8ac0-89aab2acc977"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+ViZDoom = "13bb3beb-38fe-5ca7-9a46-050a216300b1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
